--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -661,8 +661,8 @@
                                 alt="Header Avatar">
                             <span class="text-start ms-xl-2">
                                 <span
-                                    class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">{{userData.first_name}}
-                                    {{userData.last_name}}</span>
+                                    class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">{{userData.nombre}}
+                                    {{userData.apellido}}</span>
                                 <span
                                     class="d-none d-xl-block ms-1 fs-12 text-muted user-name-sub-text">{{userData.role}}</span>
                             </span>
@@ -670,10 +670,10 @@
                     </button>
                     <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
                         <!-- item-->
-                        <h6 class="dropdown-header">Bienvenid@ {{userData.first_name}}!</h6>
-                        <a class="dropdown-item" routerLink="/pages/profile"><i
+                        <h6 class="dropdown-header">Bienvenid@ {{userData.nombre}}!</h6>
+                        <button class="dropdown-item" (click)="irPerfil()"><i
                                 class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
-                                class="align-middle">Perfil</span></a>
+                                class="align-middle">Perfil</span></button>
                         <a class="dropdown-item" routerLink="/apps/chat"><i
                                 class="mdi mdi-message-text-outline text-muted fs-16 align-middle me-1"></i> <span
                                 class="align-middle">Mensajes</span></a>
