--- a/src/app/pages/extrapages/profile/profile/profile.component.html
+++ b/src/app/pages/extrapages/profile/profile/profile.component.html
@@ -12,7 +12,7 @@
         </div><!--end col-->
         <div class="col">
             <div class="p-2">
-                <h3 class="text-white mb-1">{{userData.first_name}} {{userData.last_name}}</h3>
+                <h3 class="text-white mb-1">{{userData.nombre}} {{userData.apellido}}</h3>
                 <p class="text-white-75">{{userData.role}}</p>
                 <div class="hstack text-white-50 gap-1">
                     <div class="me-2"><i
@@ -78,12 +78,12 @@
                                                     <tbody>
                                                         <tr>
                                                             <th class="ps-0" scope="row">Nombre :</th>
-                                                            <td class="text-muted">{{userData.first_name}}
-                                                                {{userData.last_name}}</td>
+                                                            <td class="text-muted">{{userData.nombre}}
+                                                                {{userData.apellido}}</td>
                                                         </tr>
                                                         <tr>
                                                             <th class="ps-0" scope="row">Teléfono :</th>
-                                                            <td class="text-muted">{{userData.phone}}</td>
+                                                            <td class="text-muted">{{userData.telefono}}</td>
                                                         </tr>
                                                         <tr>
                                                             <th class="ps-0" scope="row">Correo Electrónico :</th>
