--- a/src/app/pages/extrapages/team/team.component.html
+++ b/src/app/pages/extrapages/team/team.component.html
@@ -26,7 +26,7 @@
                                     <div class="col" *ngFor="let data of Team | filter:term" id="t_{{data.id}}">
                                         <div class="card team-box">
                                             <div class="team-cover">
-                                                <img src="{{data.backgroundImg}}" alt="" class="img-fluid" />
+                                                <img src="{{data.backgroundImg ? data.backgroundImg : 'assets/images/small/img-9.jpg'}}" alt="" class="img-fluid" />
                                             </div>
                                             <div class="card-body p-4">
                                                 <div class="row align-items-center team-row">
@@ -78,14 +78,14 @@
                                                                 *ngIf="!data.userImage">
                                                                 <div
                                                                     class="avatar-title border bg-light text-primary rounded-circle text-uppercase">
-                                                                    {{ data.name.charAt(0) }}</div>
+                                                                    {{ data.nombre.charAt(0) }}</div>
                                                             </div>
                                                             <div class="team-content">
                                                                 <a data-bs-toggle="offcanvas"
                                                                     aria-controls="offcanvasExample"
                                                                     (click)="openEnd(viewContent)"
                                                                     (click)="viewDataGet(data.id)">
-                                                                    <h5 class="fs-16 mb-1">{{data.name}}</h5>
+                                                                    <h5 class="fs-16 mb-1">{{data.nombre}}</h5>
                                                                 </a>
                                                                 <p class="text-muted mb-0">{{data.jobPosition}}</p>
                                                             </div>
@@ -94,19 +94,19 @@
                                                     <div class="col-lg-4 col">
                                                         <div class="row text-muted text-center">
                                                             <div class="col-6 border-end border-end-dashed">
-                                                                <h5 class="mb-1">{{data.projectCount}}</h5>
+                                                                <h5 class="mb-1">{{data.projectCount > 0 ? data.projectCount : 0}}</h5>
                                                                 <p class="text-muted mb-0">Proyectos</p>
                                                             </div>
                                                             <div class="col-6">
-                                                                <h5 class="mb-1">{{data.taskCount}}</h5>
+                                                                <h5 class="mb-1">{{data.taskCount > 0 ? data.taskCount : 0}}</h5>
                                                                 <p class="text-muted mb-0">Tareas</p>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-2 col">
                                                         <div class="text-end">
-                                                            <a routerLink="/pages/profile"
-                                                                class="btn btn-light view-btn">Ver Perfil</a>
+                                                            <button (click)="irPerfil(data)"
+                                                                class="btn btn-light view-btn">Ver Perfil</button>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -115,12 +115,12 @@
                                         <!--end card-->
                                     </div>
                                     <!--end col-->
-                                    <div class="col-lg-12">
+                                    <!--<div class="col-lg-12">
                                         <div class="text-center mb-3">
                                             <a href="javascript:void(0);" class="text-success arrow-none"><i
                                                     class="mdi mdi-loading mdi-spin fs-20 align-middle me-2"></i> Cargar Mas </a>
                                         </div>
-                                    </div>
+                                    </div>-->
                                 </div>
                                 <!--end row-->
                             </ng-template>
@@ -187,35 +187,35 @@
                                                                 *ngIf="!data.userImage">
                                                                 <div
                                                                     class="avatar-title border bg-light text-primary rounded-circle text-uppercase">
-                                                                    {{ data.name.charAt(0) }}</div>
+                                                                    {{ data.nombre.charAt(0) }}</div>
                                                             </div>
                                                             <div class="team-content">
                                                                 <a data-bs-toggle="offcanvas"
                                                                     aria-controls="offcanvasExample"
                                                                     (click)="openEnd(viewContent)"
                                                                     (click)="viewDataGet(data.id)">
-                                                                    <h5 class="fs-16 mb-1">{{data.name}}</h5>
+                                                                    <h5 class="fs-16 mb-1">{{data.nombre}}</h5>
                                                                 </a>
-                                                                <p class="text-muted mb-0">{{data.jobPosition}}</p>
+                                                                <p class="text-muted mb-0">{{data.email}}</p>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-4 col">
                                                         <div class="row text-muted text-center">
                                                             <div class="col-6 border-end border-end-dashed">
-                                                                <h5 class="mb-1">{{data.projectCount}}</h5>
+                                                                <h5 class="mb-1">{{data.projectCount > 0 ? data.projectCount : 0}}</h5>
                                                                 <p class="text-muted mb-0">Proyectos</p>
                                                             </div>
                                                             <div class="col-6">
-                                                                <h5 class="mb-1">{{data.taskCount}}</h5>
+                                                                <h5 class="mb-1">{{data.taskCount > 0 ? data.taskCount : 0}}</h5>
                                                                 <p class="text-muted mb-0">Tareas</p>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-2 col">
                                                         <div class="text-end">
-                                                            <a routerLink="/pages/profile"
-                                                                class="btn btn-light view-btn">Ver Perfil</a>
+                                                            <button (click)="irPerfil(data)"
+                                                                class="btn btn-light view-btn">Ver Perfil</button>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -224,12 +224,12 @@
                                         <!--end card-->
                                     </div>
                                     <!--end col-->
-                                    <div class="col-lg-12">
+                                    <!--<div class="col-lg-12">
                                         <div class="text-center mb-3">
                                             <a href="javascript:void(0);" class="text-success"><i
                                                     class="mdi mdi-loading mdi-spin fs-20 align-middle me-2"></i> Cargar Mas </a>
                                         </div>
-                                    </div>
+                                    </div>-->
                                 </div>
                                 <!--end row-->
                             </ng-template>
@@ -330,12 +330,44 @@
                                 <div class="mb-3">
                                     <label for="teammembersName" class="form-label">Nombre</label>
                                     <input type="text" class="form-control" id="teammembersName"
-                                        placeholder="Ingresar Nombre" formControlName="name"
-                                        [ngClass]="{ 'is-invalid': submitted && form['name'].errors }">
+                                        placeholder="Ingresar Nombre" formControlName="nombre"
+                                        [ngClass]="{ 'is-invalid': submitted && form['nombre'].errors }">
                                     <div class="invalid-feedback">Ingrese Nombre.</div>
                                 </div>
+                                
+                                <div class="mb-3">
+                                    <label for="teammembersLastName" class="form-label">Apellido</label>
+                                    <input type="text" class="form-control" id="teammembersLastName"
+                                        placeholder="Ingresar Apellido" formControlName="apellido"
+                                        [ngClass]="{ 'is-invalid': submitted && form['apellido'].errors }">
+                                    <div class="invalid-feedback">Ingrese Apellido.</div>
+                                </div>
 
-                                <div class="mb-4">
+                                <div class="mb-3">
+                                    <label for="teammembersRut" class="form-label">RUT</label>
+                                    <input type="text" class="form-control" id="teammembersRUT"
+                                        placeholder="Ingresar RUT" formControlName="rut"
+                                        [ngClass]="{ 'is-invalid': submitted && form['rut'].errors }">
+                                    <div class="invalid-feedback">Ingrese RUT.</div>
+                                </div>
+                                
+                                <div class="mb-3">
+                                    <label for="teammembersEmail" class="form-label">Correo Electrónico</label>
+                                    <input type="text" class="form-control" id="teammembersEmail"
+                                        placeholder="Ingresar Correo Electrónico" formControlName="email"
+                                        [ngClass]="{ 'is-invalid': submitted && form['email'].errors }">
+                                    <div class="invalid-feedback">Ingrese Correo Electrónico.</div>
+                                </div>
+                                
+                                <div class="mb-3">
+                                    <label for="teammembersPhone" class="form-label">Teléfono</label>
+                                    <input type="text" class="form-control" id="teammembersPhone"
+                                        placeholder="Ingresar Teléfono" formControlName="telefono"
+                                        [ngClass]="{ 'is-invalid': submitted && form['telefono'].errors }">
+                                    <div class="invalid-feedback">Ingrese Teléfono.</div>
+                                </div>
+
+                                <!--<div class="mb-4">
                                     <label for="designation" class="form-label">Descripción</label>
                                     <input type="text" class="form-control" id="designation"
                                         placeholder="Ingresar descripción" formControlName="designation"
@@ -357,7 +389,7 @@
                                         formControlName="tasks"
                                         [ngClass]="{ 'is-invalid': submitted && form['tasks'].errors }">
                                     <div class="invalid-feedback">Ingrese una tarea.</div>
-                                </div>
+                                </div>-->
 
                                 <div class="hstack gap-2 justify-content-end">
                                     <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="modal.dismiss('Cross click')">Cerrar</button>
@@ -532,10 +564,9 @@
                 </div>
                 <!--end offcanvas-body-->
                 <div class="offcanvas-foorter border p-3 hstack gap-3 text-center position-relative">
-                    <button class="btn btn-light w-100"><i class="ri-question-answer-fill align-bottom ms-1"></i> Send
-                        Message</button>
-                    <a routerLink="/pages/profile" class="btn btn-primary w-100"><i
-                            class="ri-user-3-fill align-bottom ms-1"></i> Ver Perfil</a>
+                    <button class="btn btn-light w-100"><i class="ri-question-answer-fill align-bottom ms-1"></i> Enviar Mensaje</button>
+                    <button routerLink="/pages/profile" class="btn btn-primary w-100"><i
+                            class="ri-user-3-fill align-bottom ms-1"></i> Ver Perfil</button>
                 </div>
             </ng-template>
         </div>
@@ -556,15 +587,15 @@
                 <lord-icon src="https://cdn.lordicon.com/gsqxdxog.json" trigger="loop"
                     colors="primary:#f7b84b,secondary:#f06548" style="width:100px;height:100px"></lord-icon>
                 <div class="mt-4 pt-2 fs-15 mx-4 mx-sm-5">
-                    <h4>Are you Sure ?</h4>
-                    <p class="text-muted mx-4 mb-0">Are you Sure You want to Remove this Product ?</p>
+                    <h4>¿ Estas seguro ?</h4>
+                    <p class="text-muted mx-4 mb-0">Estás seguro de eliminar este usuario?</p>
                 </div>
             </div>
             <div class="d-flex gap-2 justify-content-center mt-4 mb-2">
                 <button type="button" class="btn w-sm btn-light" data-bs-dismiss="modal"
-                    (click)="modal.close('Close click')">Close</button>
+                    (click)="modal.close('Close click')">Cerrar</button>
                 <button type="button" class="btn w-sm btn-danger " id="delete-product" (click)="deleteData(deleteId)"
-                    (click)="modal.close('Close click')">Yes, Delete It!</button>
+                    (click)="modal.close('Close click')">Si, Borrala!</button>
             </div>
         </div>
     </div><!-- /.modal-content -->
