ajuste detalles lista proyecto

--- a/src/app/extraspages/steps/steps.component.html
+++ b/src/app/extraspages/steps/steps.component.html
@@ -1,5 +1,5 @@
 <!-- auth-page wrapper -->
-<div class="auth-page-wrapper py-5 d-flex justify-content-center align-items-center min-vh-100" style="background-image: url(assets/images/fondo-pasos.png);">
+<div class="auth-page-wrapper d-flex justify-content-center align-items-center min-vh-100" style="background-image: url(assets/images/fondo-pasos.png);padding-top: 0em !important;padding-bottom: 40em !important;">
 
     <!-- auth-page content -->
     <div class="auth-page-content overflow-hidden p-0">
