--- a/src/app/account/auth/pass-create/basic/basic.component.html
+++ b/src/app/account/auth/pass-create/basic/basic.component.html
@@ -119,4 +119,5 @@
     <!-- end Footer -->
   </div>
   <!-- end auth-page-wrapper -->
+<app-toastsrc aria-live="polite" aria-atomic="true"></app-toastsrc>
   
