--- a/src/app/pages/projects/create/step1/step1.component.html
+++ b/src/app/pages/projects/create/step1/step1.component.html
@@ -9,16 +9,15 @@
         <h4 style="text-align: center;">Define la ubicación de tu proyecto</h4>
         <div class="card">
             <div class="card-body">
+                <form [formGroup]="locationForm">
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="mb-3 mb-lg-0">
                             <label for="choices-priority-input" class="form-label">Región</label>
                             <select class="form-select" placeholder="Selecciona región" data-choices data-choices-search-false
-                                id="choices-priority-input">
+                                id="choices-priority-input" formControlName="regionId">
                                 <option value="">Selecciona región</option>
-                                <option value="High">High</option>
-                                <option value="Medium">Medium</option>
-                                <option value="Low">Low</option>
+                                <option *ngFor="let r of regions;" value="{{r.id}}" (click)="getComunes(r.id)">{{r.nombre}}</option>
                             </select>
                         </div>
                     </div>
@@ -27,11 +26,9 @@
                         <div class="mb-3 mb-lg-0">
                             <label for="choices-priority-input" class="form-label">Comuna</label>
                             <select class="form-select" placeholder="Selecciona comuna" data-choices data-choices-search-false
-                                id="choices-priority-input2">
+                                id="choices-priority-input2" formControlName="comunaId">
                                 <option value="">Selecciona comuna</option>
-                                <option value="High">High</option>
-                                <option value="Medium">Medium</option>
-                                <option value="Low">Low</option>
+                                <option *ngFor="let c of comunes;" value="{{c.id}}">{{c.nombre}}</option>
                             </select>
                         </div>
                     </div>
@@ -40,15 +37,15 @@
                         <div class="mb-3 mb-lg-0">
                             <label for="choices-priority-input" class="form-label">Tipo de zona</label>
                             <select class="form-select" placeholder="Selecciona tipo de zona" data-choices data-choices-search-false
-                                id="choices-priority-input3">
+                                id="choices-priority-input3" formControlName="zonaId">
                                 <option value="">Selecciona tipo de zona</option>
-                                <option value="High">High</option>
-                                <option value="Medium">Medium</option>
-                                <option value="Low">Low</option>
+                                <option value="1">Rural</option>
+                                <option value="2">Urbana</option>
                             </select>
                         </div>
                     </div>
                 </div>
+                </form>
             </div>
         </div>
     </div>
